--- a/css/home.css
+++ b/css/home.css
@@ -24,7 +24,7 @@
 }
 
 .cash-project {
-    background-image: url(../images/cashmangement.png);
+    background-image: url(../images/noteapp.png);
 }
 
 .expense-project {
