--- a/css/home.css
+++ b/css/home.css
@@ -28,7 +28,7 @@
 }
 
 .expense-project {
-    background-image: url(../images/expenseapp.png);
+    background-image: url(../images/cashmangement.png);
 }
 
 .nugget-project {
