--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,5 @@
 .image-about {
-    background-image: url(../images/Raghav.jpg);
+    background-image: url(../images/raghav_new.jpg);
 }
 
 .dl-project,
